--- a/PyCitySchools/Resources/PyCitySchools.ipynb
+++ b/PyCitySchools/Resources/PyCitySchools.ipynb
@@ -150,28 +150,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'method' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m school_count \u001b[39m=\u001b[39m orignal_school_data[\u001b[39m\"\u001b[39m\u001b[39mschool_name\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39munique\n\u001b[0;32m      3\u001b[0m school_total \n\u001b[1;32m----> 4\u001b[0m school_count[\u001b[39m\"\u001b[39;49m\u001b[39mschool_name\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39mvalue_counts()\n\u001b[0;32m      5\u001b[0m school_count\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'method' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#find the total number of unique schools\n",
-    "school_count = orignal_school_data[\"school_name\"].unique\n",
-    "school_total \n",
-    "school_count[\"school_name\"].value_counts()\n",
+    "school_count = len(orignal_school_data[\"school_name\"].unique())\n",
     "school_count"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
