--- a/PyCitySchools/Resources/PyCitySchools.ipynb
+++ b/PyCitySchools/Resources/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -37,25 +37,29 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>School ID_x</th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>grade</th>\n",
        "      <th>school_name</th>\n",
-       "      <th>type_x</th>\n",
-       "      <th>size_x</th>\n",
-       "      <th>budget_x</th>\n",
-       "      <th>School ID_y</th>\n",
-       "      <th>type_y</th>\n",
-       "      <th>size_y</th>\n",
-       "      <th>budget_y</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>School ID</th>\n",
+       "      <th>type</th>\n",
+       "      <th>size</th>\n",
+       "      <th>budget</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
+       "      <td>Paul Bradley</td>\n",
+       "      <td>M</td>\n",
+       "      <td>9th</td>\n",
        "      <td>Huang High School</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <td>66</td>\n",
+       "      <td>79</td>\n",
        "      <td>0</td>\n",
        "      <td>District</td>\n",
        "      <td>2917</td>\n",
@@ -64,72 +68,80 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>Figueroa High School</td>\n",
+       "      <td>Victor Smith</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>94</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
        "      <td>District</td>\n",
-       "      <td>2949</td>\n",
-       "      <td>1884411</td>\n",
-       "      <td>1</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2949</td>\n",
-       "      <td>1884411</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>Shelton High School</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1761</td>\n",
-       "      <td>1056600</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1761</td>\n",
-       "      <td>1056600</td>\n",
+       "      <td>Kevin Rodriguez</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>90</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>Hernandez High School</td>\n",
+       "      <td>Dr. Richard Scott</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>67</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0</td>\n",
        "      <td>District</td>\n",
-       "      <td>4635</td>\n",
-       "      <td>3022020</td>\n",
-       "      <td>3</td>\n",
-       "      <td>District</td>\n",
-       "      <td>4635</td>\n",
-       "      <td>3022020</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>Griffin High School</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1468</td>\n",
-       "      <td>917500</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1468</td>\n",
-       "      <td>917500</td>\n",
+       "      <td>Bonnie Ray</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>97</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   School ID_x            school_name    type_x  size_x  budget_x  \\\n",
-       "0            0      Huang High School  District    2917   1910635   \n",
-       "1            1   Figueroa High School  District    2949   1884411   \n",
-       "2            2    Shelton High School   Charter    1761   1056600   \n",
-       "3            3  Hernandez High School  District    4635   3022020   \n",
-       "4            4    Griffin High School   Charter    1468    917500   \n",
+       "   Student ID       student_name gender grade        school_name  \\\n",
+       "0           0       Paul Bradley      M   9th  Huang High School   \n",
+       "1           1       Victor Smith      M  12th  Huang High School   \n",
+       "2           2    Kevin Rodriguez      M  12th  Huang High School   \n",
+       "3           3  Dr. Richard Scott      M  12th  Huang High School   \n",
+       "4           4         Bonnie Ray      F   9th  Huang High School   \n",
        "\n",
-       "   School ID_y    type_y  size_y  budget_y  \n",
-       "0            0  District    2917   1910635  \n",
-       "1            1  District    2949   1884411  \n",
-       "2            2   Charter    1761   1056600  \n",
-       "3            3  District    4635   3022020  \n",
-       "4            4   Charter    1468    917500  "
+       "   reading_score  math_score  School ID      type  size   budget  \n",
+       "0             66          79          0  District  2917  1910635  \n",
+       "1             94          61          0  District  2917  1910635  \n",
+       "2             90          60          0  District  2917  1910635  \n",
+       "3             67          58          0  District  2917  1910635  \n",
+       "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,20 +149,20 @@
    "source": [
     "# name the file to load to the reader\n",
     "main_school_csv = Path(\"C:\\\\Homework\\\\pandas-challenge\\\\PyCitySchools\\\\Resources\\\\schools_complete.csv\")\n",
-    "main_students_csv = Path(\"C:\\\\Homework\\\\pandas-challenge\\\\PyCitySchools\\\\Resources\\\\schools_complete.csv\")\n",
+    "main_students_csv = Path(\"C:\\\\Homework\\\\pandas-challenge\\\\PyCitySchools\\\\Resources\\\\students_complete.csv\")\n",
     "\n",
     "#read the files and store into dataframes\n",
     "school_file = pd.read_csv(main_school_csv)\n",
     "student_file = pd.read_csv(main_students_csv)\n",
     "\n",
     "# combine this data into one dataframe\n",
-    "orignal_school_data = pd.merge(student_file, school_file, how=\"left\", on=[\"school_name\", \"school_name\"])\n",
+    "original_school_data = pd.merge(student_file, school_file, how=\"left\", on=[\"school_name\", \"school_name\"])\n",
     "orignal_school_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +171,7 @@
        "15"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,10 +184,299 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39170"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find the total number of students\n",
+    "student_count = len(original_school_data[\"student_name\"])\n",
+    "student_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24649428"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate the total budget \n",
+    "total_budget = sum(original_school_data[\"budget\"].unique())\n",
+    "total_budget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78.98537145774827"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate the average math score\n",
+    "math_average = (sum(original_school_data[\"math_score\"])) / (len(original_school_data[\"student_name\"]))\n",
+    "math_average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81.87784018381414"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate the average reading score\n",
+    "reading_average = (sum(original_school_data[\"reading_score\"])) / (len(original_school_data[\"student_name\"]))\n",
+    "reading_average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.9808526933878"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate the percentage of students who passed math (> or = 70)\n",
+    "students_passing_math = original_school_data[(original_school_data[\"math_score\"] >= 70)].count()[\"student_name\"]\n",
+    "passing_math_percentage = students_passing_math / float(student_count) * 100\n",
+    "passing_math_percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85.80546336482001"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate the percentage of students who passed reading (> or = 70)\n",
+    "students_passing_reading = original_school_data[(original_school_data[\"reading_score\"] >= 70)].count()[\"student_name\"]\n",
+    "passing_reading_percentage = students_passing_reading / float(student_count) * 100\n",
+    "passing_reading_percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65.17232575950983"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate the percentage of students who passed math and reading (> or = 70)\n",
+    "passing_math_reading_count = original_school_data[(original_school_data[\"math_score\"] >= 70) & (original_school_data[\"reading_score\"] >= 70)].count()[\"student_name\"]\n",
+    "overall_passing_rate = passing_math_reading_count /  float(student_count) * 100\n",
+    "overall_passing_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39,170</td>\n",
+       "      <td>$24,649,428.00</td>\n",
+       "      <td>78.985371</td>\n",
+       "      <td>81.87784</td>\n",
+       "      <td>74.980853</td>\n",
+       "      <td>85.805463</td>\n",
+       "      <td>65.172326</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools Total Students    Total Budget  Average Math Score  \\\n",
+       "0             15         39,170  $24,649,428.00           78.985371   \n",
+       "\n",
+       "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
+       "0               81.87784       74.980853          85.805463          65.172326  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a dataframe from the results collected above called district_summary\n",
+    "data = {'Total Schools':[school_count],\n",
+    "        'Total Students':[student_count],\n",
+    "        'Total Budget':[total_budget],\n",
+    "        'Average Math Score':[math_average],\n",
+    "        'Average Reading Score':[reading_average],\n",
+    "        '% Passing Math':[passing_math_percentage],\n",
+    "        '% Passing Reading':[passing_reading_percentage],\n",
+    "        '% Overall Passing':[overall_passing_rate]}\n",
+    "\n",
+    "district_summary = pd.DataFrame(data)\n",
+    "\n",
+    "# Formatting\n",
+    "district_summary[\"Total Students\"] = district_summary[\"Total Students\"].map(\"{:,}\".format)\n",
+    "district_summary[\"Total Budget\"] = district_summary[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "district_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['District', 'Charter'], dtype=object)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Use the code provided to select all of the school types\n",
+    "#data = pd.read_csv(schools_complete.csv\", index_col =\"type\")\n",
+    "                   \n",
+    "# creating a mini dataframe or a series by reading the csv and thenmaking rows and columns?\n",
+    "# new_row = pd.DataFrame({'Name':'Geeks', 'Team':'Boston', 'Number':3,\n",
+    "#                         'Position':'PG', 'Age':33, 'Height':'6-2',\n",
+    "#                         'Weight':189, 'College':'MIT', 'Salary':99999},\n",
+    "#                                                             index =[0])\n",
+    "# data\n",
+    "\n",
+    "# writing a simple code to produce a string of the variables?\n",
+    "school_type = original_school_data[\"type\"].unique()\n",
+    "school_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'groupby' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[44], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m per_school_counts \u001b[39m=\u001b[39m groupby\u001b[39m.\u001b[39moriginal_school_data\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'groupby' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "per_school_counts = groupby.original_school_data"
+   ]
   }
  ],
  "metadata": {
