--- a/PyCitySchools/Resources/PyCitySchools.ipynb
+++ b/PyCitySchools/Resources/PyCitySchools.ipynb
@@ -161,6 +161,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "District Summary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -405,7 +413,7 @@
     }
    ],
    "source": [
-    "# create a dataframe from the results collected above called district_summary\n",
+    "# create a dataframe from the results collected above called district_summary (District Summary DataFrame)\n",
     "data = {'Total Schools':[school_count],\n",
     "        'Total Students':[student_count],\n",
     "        'Total Budget':[total_budget],\n",
@@ -426,8 +434,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "School Summary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -436,47 +452,149 @@
        "array(['District', 'Charter'], dtype=object)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Use the code provided to select all of the school types\n",
-    "#data = pd.read_csv(schools_complete.csv\", index_col =\"type\")\n",
-    "                   \n",
-    "# creating a mini dataframe or a series by reading the csv and thenmaking rows and columns?\n",
-    "# new_row = pd.DataFrame({'Name':'Geeks', 'Team':'Boston', 'Number':3,\n",
-    "#                         'Position':'PG', 'Age':33, 'Height':'6-2',\n",
-    "#                         'Weight':189, 'College':'MIT', 'Salary':99999},\n",
-    "#                                                             index =[0])\n",
-    "# data\n",
-    "\n",
-    "# writing a simple code to produce a string of the variables?\n",
+    "#code to collect all of the school types\n",
     "school_type = original_school_data[\"type\"].unique()\n",
     "school_type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'groupby' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[44], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m per_school_counts \u001b[39m=\u001b[39m groupby\u001b[39m.\u001b[39moriginal_school_data\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'groupby' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "Bailey High School       4976\n",
+       "Johnson High School      4761\n",
+       "Hernandez High School    4635\n",
+       "Rodriguez High School    3999\n",
+       "Figueroa High School     2949\n",
+       "Huang High School        2917\n",
+       "Ford High School         2739\n",
+       "Wilson High School       2283\n",
+       "Cabrera High School      1858\n",
+       "Wright High School       1800\n",
+       "Shelton High School      1761\n",
+       "Thomas High School       1635\n",
+       "Griffin High School      1468\n",
+       "Pena High School          962\n",
+       "Holden High School        427\n",
+       "Name: school_name, dtype: int64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "per_school_counts = groupby.original_school_data"
+    "# code to pull the number of students per each school\n",
+    "per_school_counts = original_school_data.school_name.value_counts()\n",
+    "per_school_counts"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Bailey High School       628.0\n",
+       "Cabrera High School      582.0\n",
+       "Figueroa High School     639.0\n",
+       "Ford High School         644.0\n",
+       "Griffin High School      625.0\n",
+       "Hernandez High School    652.0\n",
+       "Holden High School       581.0\n",
+       "Huang High School        655.0\n",
+       "Johnson High School      650.0\n",
+       "Pena High School         609.0\n",
+       "Rodriguez High School    637.0\n",
+       "Shelton High School      600.0\n",
+       "Thomas High School       638.0\n",
+       "Wilson High School       578.0\n",
+       "Wright High School       583.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the total school budget and per student spending per school\n",
+    "per_school_budget = school_file.groupby(\"school_name\").max()[\"budget\"]\n",
+    "per_school_capita = (per_school_budget / per_school_counts)\n",
+    "per_school_capita"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\evapa\\AppData\\Local\\Temp\\ipykernel_17680\\3236387454.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  per_school_math = original_school_data.groupby(\"school_name\").mean()[\"math_score\"]\n",
+      "C:\\Users\\evapa\\AppData\\Local\\Temp\\ipykernel_17680\\3236387454.py:5: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  per_school_reading = original_school_data.groupby(\"school_name\").mean()[\"reading_score\"]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Bailey High School       81.033963\n",
+       "Cabrera High School      83.975780\n",
+       "Figueroa High School     81.158020\n",
+       "Ford High School         80.746258\n",
+       "Griffin High School      83.816757\n",
+       "Hernandez High School    80.934412\n",
+       "Holden High School       83.814988\n",
+       "Huang High School        81.182722\n",
+       "Johnson High School      80.966394\n",
+       "Pena High School         84.044699\n",
+       "Rodriguez High School    80.744686\n",
+       "Shelton High School      83.725724\n",
+       "Thomas High School       83.848930\n",
+       "Wilson High School       83.989488\n",
+       "Wright High School       83.955000\n",
+       "Name: reading_score, dtype: float64"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculate the average test scores per school in math and reading\n",
+    "per_school_math = original_school_data.groupby(\"school_name\").mean()[\"math_score\"]\n",
+    "per_school_math\n",
+    "\n",
+    "per_school_reading = original_school_data.groupby(\"school_name\").mean()[\"reading_score\"]\n",
+    "per_school_reading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
